HCMPRE-470 adding changes for validating assumptions on the basis of campaign details